update page header

--- a/src/components/PageHeader.astro
+++ b/src/components/PageHeader.astro
@@ -17,18 +17,18 @@ import Icon from "astro-icon";
   <div class="flex items-center gap-3">
     <a
       target="_blank"
-      href="https://vercel.com/templates/astro/view-transitions"
+      href="https://spotify-astro-theme.vercel.app/"
       class="flex relative overflow-hidden group bg-gradient-to-br from-black/10 to-black/40 rounded-md px-2.5 h-7 text-gray-200 hover:text-white transition-colors gap-1 items-center"
     >
       <span class="text-xs">
-        Deploy on <span class="font-bold">Vercel</span>
+        View on <span class="font-bold">Vercel</span>
       </span>
       <Icon name="ion:logo-vercel" class="h-4 w-4" />
     </a>
     <a
       target="_blank"
       aria-label={"github repository"}
-      href="https://github.com/igorm84/spotify-astro-transitions"
+      href="https://github.com/the-bipu/spotify-astro-theme"
       class="text-gray-200 hover:text-white"
     >
       <Icon name="mdi:github" class="h-7 w-7" />
